Fixes fdo#46186, The Table Remains in the defined writing mode.

The table in impress is drawn under the rectangular are, on Selecting
the table it was only selecting the rectangular area and not the cells
inside, Making the layout to be as RTL which was mirroring the table.

But, We need the table to be in RTL Writing mode and not mirroring the
table. Now on applying my patch, If table is selected, it will select
the entire cells inside which is the actual table and the functionality
works fine.

Change-Id: I9d6bdde5019322488be66fa89a6488d348b2cf44