svx/source/table/tablecontroller.cxx
@@ -366,6 +366,13 @@ void SvxTableController::onSelectionHasChanged()
         const SdrMarkList& rMarkList= mpView->GetMarkedObjectList();
         if( rMarkList.GetMarkCount() == 1 )
             bSelected = mxTableObj.get() == rMarkList.GetMark(0)->GetMarkedSdrObj();
+        /* Selecting the table means selecting the entire cells inturn*/
+        if(!hasSelectedCells())
+        {
+            maCursorFirstPos = pTableObj->getFirstCell();
+            maCursorLastPos = pTableObj->getLastCell();
+            mbCellSelectionMode=true;
+        }
     }
 
     if( bSelected )
